# scc

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: check_linked_issues.yaml  ci.yaml  main.push.yaml
docker/build-container/: Dockerfile
examples/hello_world/: hello_world
src/: CMakeLists.txt
src/ast/: CMakeLists.txt  ast_binary_expression.cpp  ast_break_statement.cpp  ast_conditional_statement.cpp  ast_expression.cpp  ast_expression_statement.cpp  ast_for_loop_statement.cpp  ast_function_call_expression.cpp  ast_identifier_expression.cpp  ast_integer_literal_expression.cpp  ast_node.cpp  ast_scope.cpp  ast_statement.cpp  ast_string_literal_expression.cpp  ast_type_info.cpp  ast_unary_expression.cpp  ast_variable_declaration.cpp  ast_variable_definition_statement.cpp  ast_visitor.cpp  binary_expression.cpp  break_statement.cpp  conditional_statement.cpp  expression.cpp  expression_statement.cpp  for_loop_statement.cpp  function_call_expression.cpp  function_definition_statement.cpp  identifier_expression.cpp  integer_literal_expression.cpp  module.cpp  node.cpp  return_statement.cpp  scope.cpp  source_range.cpp  statement.cpp  string_literal_expression.cpp  type_info.cpp  unary_expression.cpp  variable_declaration.cpp  variable_definition_statement.cpp  (+1 more)
src/cli/: CMakeLists.txt  commandline_processor.cpp  main.cpp  module.cpp
src/compiler/: CMakeLists.txt  ast_binary_expression.cpp  ast_break_statement.cpp  ast_conditional_statement.cpp  ast_expression.cpp  ast_expression_statement.cpp  ast_for_loop_statement.cpp  ast_function_call_expression.cpp  ast_identifier_expression.cpp  ast_integer_literal_expression.cpp  ast_loop_statement.cpp  ast_node.cpp  ast_scope.cpp  ast_statement.cpp  ast_string_literal_expression.cpp  ast_type_info.cpp  ast_unary_expression.cpp  ast_variable_declaration.cpp  ast_variable_definition_statement.cpp  ast_visitor.cpp  exception.cpp  lexer.cpp  module.cpp  parser.cpp  printer.cpp  source_range.cpp  token.cpp  translator.cpp
src/std/: CMakeLists.txt  module.cpp
src/std/print/: println.cpp
test/: CMakeLists.txt  test.h
test/cli_test/: CMakeLists.txt  commandline_processor_test.cpp  main_test.cpp
test/cli_test/main_test_data/fahrenheit_celsius_table/: fahrenheit_celsius_table.result  fahrenheit_celsius_table.scc
test/cli_test/main_test_data/fibonacci_sequence/: fibonacci_sequence.result  fibonacci_sequence.scc
test/cli_test/main_test_data/hello_world/: hello_world.scc
test/compiler_test/: CMakeLists.txt  lexer_test.cpp  parser_test.cpp  translator_test.cpp
test/compiler_test/translator_test_data/: empty.expected  for_statement.expected  for_statement.scc  function_definition.expected  function_definition.scc  hello_world.expected  hello_world.scc
website/: astro.config.mjs  package-lock.json  package.json
website/src/content/docs/: index.md
website/src/content/docs/docs/: comments.md  functions.md
