add_library(scc.ast)
target_sources(scc.ast PUBLIC FILE_SET CXX_MODULES FILES
    binary_expression.cpp
    break_statement.cpp
    conditional_statement.cpp
    expression_statement.cpp
    expression.cpp
    for_loop_statement.cpp
    function_call_expression.cpp
    identifier_expression.cpp
    integer_literal_expression.cpp
    module.cpp
    node.cpp
    scope.cpp
    source_range.cpp
    statement.cpp
    string_literal_expression.cpp
    type_info.cpp
    unary_expression.cpp
    variable_declaration.cpp
    variable_definition_statement.cpp
    visitor.cpp
)